# custom-constraints

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yaml  pull_request_template.md  settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yaml  release.yaml
benches/: matrix.rs
src/: ccs.rs  circuit.rs  lib.rs  matrix.rs  optimizer.rs
src/ccs/: generic.rs  mod.rs  plonkish.rs
src/circuit/: expression.rs  mod.rs  tests.rs
